update to Java 21.
remove --enable-preview, as Virtual Threads are now released.